--- a/public/app/html/search-word.html
+++ b/public/app/html/search-word.html
@@ -26,9 +26,7 @@
 </div>
 
 
-<div class="col-md-12">
-  <list-search-result-detail-component [listResult]="resultsParent"></list-search-result-detail-component>
-</div>
+<list-search-result-detail-component [listResult]="resultsParent" [word]="word"></list-search-result-detail-component>
 
     
 						
