--- a/public/app/html/layout.html
+++ b/public/app/html/layout.html
@@ -1,10 +1,34 @@
-<header>
-  <search-word-component></search-word-component>
-</header>
+<div class="container body">
+  <div class="main_container">
+    <!-- top navigation -->
+      <div class="clearfix"></div>
+      <div class="top_nav navbar navbar-fixed-top">
+        <div class="nav_menu">
+          <nav>
+            <div class="nav toggle">
+              <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+            </div>
+            <ul class="nav navbar-nav navbar-right">
+              <li role="presentation" class="dropdown">
+                <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
+                  <i class="fa fa-question-circle-o"></i>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      	<!-- /top navigation -->
+		
+		<search-word-component></search-word-component>
 
-<section>	
-	
-</section>	
-
-
-
+    <!-- footer content -->
+    <footer>
+      <div class="pull-right">
+        &copy; 2016 - 2017 by Ikbal Hamdaoui - Jimmy Muñoz.
+      </div>
+      <div class="clearfix"></div>
+    </footer>
+    <!-- /footer content -->
+  </div>
+</div>
