--- a/public/app/html/side-bar-menu.html
+++ b/public/app/html/side-bar-menu.html
@@ -1,7 +1,11 @@
 <div class="col-md-3 left_col menu_fixed">
     <div class="left_col scroll-view">
       <div class="navbar nav_title " style="border: 0;">
-        <a href="/" class="site_title"><i class="glyphicon glyphicon-book"></i> <span>Jeux de mots</span></a>
+        <a href="/" class="site_title"><i class="glyphicon glyphicon-book"></i> 
+      	<!-- 
+        	<span>Jeux de mots</span>
+      	-->
+        </a>
       </div>
 
       <div class="clearfix"></div>
@@ -10,25 +14,21 @@
         <div class="menu_section">
           <h3>General</h3>
           <ul class="nav side-menu">
-            <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
-              <ul class="nav child_menu">
-                <li><a href="index.html">Dashboard</a></li>
-                <li><a href="index2.html">Dashboard2</a></li>
-                <li><a href="index3.html">Dashboard3</a></li>
-              </ul>
-            </li>
-            <li><a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
-              <ul class="nav child_menu">
-                <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                <li><a href="fixed_footer.html">Fixed Footer</a></li>
-              </ul>
-            </li>
+            <li><a><i class="fa fa-home"></i> Home</a></li>
+            <li><a><i class="fa fa-sitemap"></i> Architectures</a>
+            <li><a><i class="fa fa-pie-chart"></i> Statistics</a>
           </ul>
         </div>
         <div class="menu_section">
           <h3>Live On</h3>
           <ul class="nav side-menu">
-            <li><a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
+            <li><a><i class="fa fa-clock-o"></i> Mon historique <span class="fa fa-chevron-down"></span></a>
+              <ul class="nav child_menu">
+                <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
+                <li><a href="fixed_footer.html">Fixed Footer</a></li>
+              </ul>
+            </li>
+            <li><a><i class="fa fa-eye"></i> Montrer / Cacher<span class="fa fa-chevron-down"></span></a>
               <ul class="nav child_menu">
                   <li><a href="#level1_1">Level One</a>
                   <li><a>Level One<span class="fa fa-chevron-down"></span></a>
