--- a/public/app/html/layout.html
+++ b/public/app/html/layout.html
@@ -5,10 +5,13 @@
       <div class="top_nav navbar navbar-fixed-top">
         <div class="nav_menu">
           <nav>
-            <div class="nav toggle">
+            <div class="nav toggle" style="width: 20%">
               <a id="menu_toggle"><i class="fa fa-bars"></i></a>
             </div>
-            <ul class="nav navbar-nav navbar-right">
+            <div style="display: inline-table; width: 60%" class="text-center">
+            	<a href="/" class="site_title"> <span>Chercheur de mots</span></a>
+            </div>
+            <ul class="nav navbar-nav navbar-right" style="width: 20%">
               <li role="presentation" class="dropdown">
                 <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
                   <i class="fa fa-question-circle-o"></i>
@@ -24,9 +27,7 @@
 
     <!-- footer content -->
     <footer>
-      <div class="pull-right">
-        &copy; 2016 - 2017 by Ikbal Hamdaoui - Jimmy Muñoz.
-      </div>
+      <div class="pull-right">&copy; 2016 - 2017 by Ikbal Hamdaoui - Jimmy Muñoz.</div>
       <div class="clearfix"></div>
     </footer>
     <!-- /footer content -->
