--- a/public/app/html/search-word.html
+++ b/public/app/html/search-word.html
@@ -1,4 +1,4 @@
-<side-bar-menu [listResult]="resultsParent" [word]="word"></side-bar-menu>
+<side-bar-menu [history]="history"></side-bar-menu>
 <!-- page content -->
 <div class="right_col" role="main" style="min-height: 819px;">
     <!-- top tiles -->
