--- a/public/app/html/filter-list-component.html
+++ b/public/app/html/filter-list-component.html
@@ -1,7 +1,5 @@
 <ul class="nav child_menu">
   <li *ngFor="let key of keys(listResult.data)">
-  	<a href="#">
-  		<label><input type="checkbox" name="cbox1" checked="checked" value="premiere_checkbox" /> {{listResult.data[key].display_value}}</label>
-  	</a>
+  	<label><input type="checkbox" (change)="filterList($event)" name="{filters}" checked="checked" value="{{key}}" /> {{listResult.data[key].display_value}}</label>
   </li>
 </ul>
