--- a/public/app/html/search-word.html
+++ b/public/app/html/search-word.html
@@ -31,6 +31,7 @@
                     />
                     
                     <span class="input-group-btn">
+                      <!-- (submit) -->
                       <button (click)="getSearchResult()" class="btn btn-default btn-primary" type="button"><i class="fa fa-search"></i> Chercher</button>
                     </span>
                   </div>
