--- a/public/app/html/list_definition.html
+++ b/public/app/html/list_definition.html
@@ -70,7 +70,8 @@
 	  <div class="x_panel-jeuxdemots">
 		<div class="x_content">
 			<div class="text-center">
-	    		<h2><i class="fa fa-book"></i> Resultats <strong>{{word}}</strong></h2> 
+	    		<h2><i class="fa fa-book"></i> Resultats <strong>{{word}}</strong> <div class="push-left polarite_neg" style="width: 80px; height: 20px; color: #FFF; ">Polarité</div>
+						</h2> 
 			</div>
 
 			<ul class="list-unstyled timeline widget">
@@ -80,7 +81,7 @@
 			    <li *ngFor="let key of keys(listResult.data)">
 			      <!-- definitions -->
 			      <div [hidden]="!listResult.data[key].visible" *ngIf="listResult.data[key].data.length && key == 'definitions'" class="block_jeuxdemots" id="section_{{key}}">
-			      		<span class="label label-info title category_button_title color-{{key}}" style="font-size: 1.2em;">{{listResult.data[key].display_value}}</span>
+			      		<span class="label label-info title category_button_title color-{{key}} font_size-1-3">{{listResult.data[key].display_value}}</span>
 			      		<span>Total {{listResult.data[key].data.length}}</span>
 						<ol>
 							<li *ngFor="let rowDefKey of keys(listResult.data[key].data)" class="byline definitions_text" (mouseenter)="mouseEnterDefinition(listResult.data[key].data[rowDefKey].termid)"  (mouseleave) ="mouseLeaveDefinition(listResult.data[key].data[rowDefKey].termid)">
@@ -99,39 +100,21 @@
 						<small>Total ({{listResult.data[key].data.length}})</small>  
 
 						<div *ngIf="listResult.data[key].data.length >= 2" class="btn-group push-right" >
-							<a href="#" data-toggle="dropdown" class="btn-link btn-default dropdown-toggle " style="font-size: 1em;">
+							<a href="#" data-toggle="dropdown" class="btn-link btn-default font_size-1-0 dropdown-toggle ">
 							  Ranger par <span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu">
-								<li><a style="cursor:pointer" (click)="sortListData(listResult.data[key],'name','+')"><i class="fa fa-sort-alpha-asc"></i> Nom Ascendant</a></li>
-								<li><a style="cursor:pointer" (click)="sortListData(listResult.data[key],'name','-')"><i class="fa fa-sort-alpha-desc"></i> Nom Descendant</a></li>
-								<li><a style="cursor:pointer" (click)="sortListData(listResult.data[key],'w','+')"><i class="fa fa-sort-numeric-asc"></i> Poids Ascendant </a></li>
-								<li><a style="cursor:pointer" (click)="sortListData(listResult.data[key],'w','-')"><i class="fa fa-sort-numeric-desc"></i> Poids Descendant </a></li>
+								<li><a class="cursor-pointer" (click)="sortListData(listResult.data[key],'name','+')"><i class="fa fa-sort-alpha-asc"></i> Nom Ascendant</a></li>
+								<li><a class="cursor-pointer" (click)="sortListData(listResult.data[key],'name','-')"><i class="fa fa-sort-alpha-desc"></i> Nom Descendant</a></li>
+								<li><a class="cursor-pointer" (click)="sortListData(listResult.data[key],'w','+')"><i class="fa fa-sort-numeric-asc"></i> Poids Ascendant </a></li>
+								<li><a class="cursor-pointer" (click)="sortListData(listResult.data[key],'w','-')"><i class="fa fa-sort-numeric-desc"></i> Poids Descendant </a></li>
 							</ul>
 						</div>
 			          	<div class="result_word_jeuxdemots">
-			          		<span class="text_word_jeuxdemots"  *ngFor="let term of listResult.data[key].data | orderby: [listResult.data[key].sort_dir + listResult.data[key].sort_field]" >
-				          		<a id="{{key}}_{{term.eid}}" class="btn-link" style="cursor: pointer;" popover="Weight: {{term.w}} id: {{term.eid}}" popoverTitle="{{term.name}}" [popoverOnHover]="true" (click)="searchNewWord(term.name)">{{term.name}}</a>,
+			          		<span class="text_word_jeuxdemots" *ngFor="let term of listResult.data[key].data | orderby: [listResult.data[key].sort_dir + listResult.data[key].sort_field]" >
+				          		<a id="{{key}}_{{term.eid}}" class="btn-link cursor-pointer {{getFontSizeByWeight(listResult.data[key], term.w)}}" popover="Weight: {{term.w}} id: {{term.eid}}" popoverTitle="{{term.name}}" [popoverOnHover]="true" (click)="searchNewWord(term.name)">{{term.name}}</a>,
 				          	</span>
 						</div>
-
-
-					<!-- 
-			          <div class="byline">
-			            
-			            <a>Ranger par: </a> 
-			            <select [(ngModel)]="listResult.data[key].sort_field" >
-			            	<option value="w">Poids</option>
-			            	<option value="name">Nom</option>
-			            </select>
-			            <select [(ngModel)]="listResult.data[key].sort_dir" >
-			            	<option value="+">Ascendant</option>
-			            	<option value="-">Descendant</option>
-			            </select>
-			          </div>
-			          	<!- - Sort By pipe: concatenate 2 params and call OrderBy - - >
-			          	
-					-->
 			        </div>
 			      </div>
 			    </li>
