--- a/public/app/html/layout.html
+++ b/public/app/html/layout.html
@@ -1,3 +1,5 @@
+<i class="iconTop fa fa-arrow-up" pageScroll [pageScrollOffset]="60" href="#search-word-section"></i>
+
 <div class="container body">
   <div class="main_container">
     <!-- top navigation -->
