--- a/public/app/html/search-word.html
+++ b/public/app/html/search-word.html
@@ -7,7 +7,7 @@
     </div>
     <!-- /top tiles -->
     <div class="row tile_count main-container-jeuxdemots" >
-      <section class="search-word">
+      <section id="search-word-section" class="search-word">
         <div class="col-md-12 col-xs-12">
           <div class="x_panel-jeuxdemots">
             <div >
