--- a/public/app/html/side-bar-menu.html
+++ b/public/app/html/side-bar-menu.html
@@ -15,20 +15,17 @@
         <h3>General</h3>
         <ul class="nav side-menu">
           <li><a><i class="fa fa-home"></i> Home</a></li>
-          <li><a><i class="fa fa-sitemap"></i> Architectures</a>
-          <li><a><i class="fa fa-pie-chart"></i> Statistics</a>
+          <li><a><i class="fa fa-sitemap"></i> Architectures</a></li>
+          <li><a><i class="fa fa-pie-chart"></i> Statistics</a></li>
         </ul>
+
       </div>
       <div class="menu_section">
         <h3>Live On</h3>
         <ul class="nav side-menu">
-          <li><a><i class="fa fa-clock-o"></i> Mon historique <span class="fa fa-chevron-down"></span></a>
-            <historique [history]="history"></historique>
-          </li>
-          <li><a><i class="fa fa-eye"></i> Montrer / Cacher<span class="fa fa-chevron-down"></span></a>
-            <filter-list-component [listResult]="listResult"></filter-list-component>               
+          <historique [history]="history"></historique>
+          <filter-list-component [listResult]="listResult"></filter-list-component>               
             
-          </li>
         </ul>
       </div>
     </div>
