--- a/public/app/html/side-bar-menu.html
+++ b/public/app/html/side-bar-menu.html
@@ -12,12 +12,7 @@
     <!-- sidebar menu -->
     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
       <div class="menu_section">
-        <h3>General</h3>
-     
-
-      </div>
-      <div class="menu_section">
-        <h3>Accueil</h3>
+        <h3>Options</h3>
         <ul class="nav side-menu">
           <historique [history]="history"></historique>
           <filter-list-component [listResult]="listResult"></filter-list-component>               
