--- a/public/app/html/filter-list-component.html
+++ b/public/app/html/filter-list-component.html
@@ -1,4 +1,4 @@
-<li><a class="fix-style-side-bar-a"><i class="fa fa-eye"></i> Montrer / Cacher<span class="fa fa-chevron-down"></span></a>
+<li><a class="fix-style-side-bar-a"><i class="fa fa-eye"></i> Filtrage<span class="fa fa-chevron-down"></span></a>
 	<ul class="nav child_menu">
 		<li *ngFor="let key of keys(listResult.data)">
 			<label><input type="checkbox" (change)="filterList($event)" name="{filters}" checked="checked" value="{{key}}" /> {{listResult.data[key].display_value}}</label>
