--- a/public/app/html/list_definition.html
+++ b/public/app/html/list_definition.html
@@ -34,8 +34,10 @@
 	  <div class="x_panel-jeuxdemots">
 		<div class="x_content">
 			<div class="text-center">
-	    		<h2><i class="fa fa-book"></i> Resultats <strong>{{word}}</strong> <div class="push-left polarite_neg" style="width: 80px; height: 20px; color: #FFF; ">Polarité</div>
-						</h2> 
+	    		<h2><i class="fa fa-book"></i> Resultats <strong>{{word}}</strong></h2> 
+				<!-- 
+	    		<div class="push-left polarite_neg" style="width: 80px; height: 20px; color: #FFF; ">Polarité</div>
+				-->
 			</div>
 
 			<ul class="list-unstyled timeline widget">
